<resources>
    <string name="app_name">iciban</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="gacha">Gacha</string>


    <string name="drag_down_to_activate_offer">Drag down to choose item</string>
    <string name="release_to_choose_banner">Release to choose banner!</string>
    <string name="t_amp_cs"><![CDATA[T&Cs]]></string>
    <string name="choose_your_action_figure_banner">SELECT BANNER</string>
    <string name="loading">Loading…</string>


    <string name="bannner_login">Banner Login</string>
    <string name="form_login">form container</string>
    <string name="start_journey">Start your journey to fortune</string>
    <string name="signin_for_new_jour">Sign up now and start your winning journey!</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="pass">Password</string>
    <string name="dont_have_account">Don’t have an account? </string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login"> Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email_invalid">Invalid email.</string>
    <string name="password_invalid">Invalid password.</string>
    <string name="logout">Logout</string>

    <string name="forget_pass">Forget Password?</string>
    <string name="naturo_action_fig">Uzumaki Naruto\nLimited Edition</string>
    <string name="naturo">Naturo Shippuden</string>
    <string name="item_list">Item List</string>
    <string name="item_details">Item Detail</string>
    <string name="avaible">Availability</string>
    <string name="avaible_stock">1/2</string>
    <string name="rarity">Rarity</string>
    <string name="desc">Description</string>
    <string name="description">Naruto follows the journey of Naruto Uzumaki, a young ninja striving to gain recognition from his village and become the Hokage. Along the way, he faces numerous enemies, hones his skills, and searches for his true identity.</string>
    <string name="gradient">gradient</string>
    <string name="password">Password</string>
    <string name="or_login_with">Or Login With Google</string>
    <string name="default_user_name">john doe</string>
    <string name="logout_successful">Logout Successful</string>
    <string name="logout_failed">Logout Failed</string>
    <string name="setting">Setting</string>
    <string name="inventory">Inventory</string>
</resources>