<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.items.ItemDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="0dp"
                >

                <ImageButton
                    android:id="@+id/btn_top_up"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_token"
                    android:layout_marginTop="8dp"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/profile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <ImageView
                    android:id="@+id/notif"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/notif"
                    app:layout_constraintEnd_toStartOf="@id/profile_pic"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginHorizontal="16dp"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/token_layout"
        app:layout_constraintStart_toStartOf="@id/app_bar"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@id/app_bar">


            <TextView
                android:id="@+id/title_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebas_neue"
                android:text="@string/naturo"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tx_item_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/item_details"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_category" />

            <ImageView
                android:id="@+id/img_action_fig"
                android:layout_width="200dp"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                android:src="@drawable/naturo_action_fig"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tx_item_detail" />

            <TextView
                android:id="@+id/title_action_fig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_semibold"
                android:shadowColor="#393636"
                android:shadowDy="4"
                android:shadowRadius="3"
                android:text="@string/naturo_action_fig"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_action_fig" />

            <TextView
                android:id="@+id/tx_avaible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/inter"
                android:text="@string/avaible"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_action_fig" />

            <TextView
                android:id="@+id/avaible_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/text_view_bg_avaible"
                android:fontFamily="@font/inter"
                android:paddingHorizontal="18dp"
                android:paddingVertical="5dp"
                android:text="@string/avaible_stock"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tx_avaible" />

            <TextView
                android:id="@+id/tx_rarity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/inter"
                android:text="@string/rarity"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/avaible_stock" />

            <RatingBar
                android:id="@+id/rating"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="@color/yellow"
                android:rating="5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tx_rarity" />

            <TextView
                android:id="@+id/tx_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/inter"
                android:text="@string/desc"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rating" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tx_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/token_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/btn_pull_one"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/one_pull"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_pull_five"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/five_pull"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>