<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F1EF"
    tools:context=".fragment.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F2F1EF"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="24dp">

                <ImageButton
                    android:id="@+id/btn_top_up"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/white"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_token"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/profile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/notif"
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:layout_marginHorizontal="16dp"
                    android:src="@drawable/notif"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/profile_pic"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:src="@drawable/ichiban_kuji_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/background_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/layout_bottom"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:scaleType="fitXY"
        android:src="@drawable/layout_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="-55dp"
        android:background="@null"
        android:src="@drawable/btn_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/layout_bottom" />

    <ImageView
        android:id="@+id/iv_setting"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="27dp"
        android:src="@drawable/ic_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/layout_bottom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/setting"
        app:layout_constraintEnd_toEndOf="@id/iv_setting"
        app:layout_constraintStart_toStartOf="@id/iv_setting"
        app:layout_constraintTop_toBottomOf="@id/iv_setting" />

    <ImageView
        android:id="@+id/iv_inventory"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_inventory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/layout_bottom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/inventory"
        app:layout_constraintEnd_toEndOf="@id/iv_inventory"
        app:layout_constraintStart_toStartOf="@id/iv_inventory"
        app:layout_constraintTop_toBottomOf="@id/iv_inventory" />

    <androidx.constraintlayout.utils.widget.MotionButton
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:visibility="gone"
        app:cornerRadius="8dp"
        app:iconPadding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_profile" />

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_back"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
